bk_ida/gccida/g0/record_constant_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_constant_1/src/varasm.c:3371:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+4Ch] [rbp-144h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_constant_1/src/varasm.c:3409:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+174h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_constant_1/src/varasm.c:3580:48: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( link->int_cst.rtl && link->int_cst.rtl[1] == 37 ) 
                          ~~~~~~~~~~~~~~~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_constant_1/src/varasm.c:3613:8: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
newa = lang_hooks_0.expand_constant( exp); 
       ^~~~~~~~~~~~
       lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_constant_1/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_constant_1/src/varasm.c:3613:36: error: called object type '<dependent type>' is not a function or function pointer
newa = lang_hooks_0.expand_constant( exp); 
                                   ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/record_constant_1/src/obj/varasm.o] Error 1
